--- a/amber/.travis.yml
+++ b/amber/.travis.yml
@@ -1,5 +1,5 @@
 language: php
-
+sudo: false
 notifications:
   on_success: never
   on_failure: change
@@ -12,10 +12,10 @@ php:
 env:
   - WP_VERSION=latest WP_MULTISITE=0
 
-matrix:
-  include:
-    - php: 5.3
-      env: WP_VERSION=latest WP_MULTISITE=1
+#matrix:
+#  include:
+#    - php: 5.3
+#      env: WP_VERSION=latest WP_MULTISITE=1
 
 before_script:
   - bash amber/bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION 
