--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,24 @@
 language: php
+sudo: false
 
-notifications:
-  on_success: never
-  on_failure: change
+#notifications:
+#  on_success: never
+#  on_failure: change
 
 php:
   - 5.3
+  - 5.4
   - 5.5
 
 env:
   - WP_VERSION=latest WP_MULTISITE=0
 
-matrix:
-  include:
-    - php: 5.3
-      env: WP_VERSION=latest WP_MULTISITE=1
+#matrix:
+#  include:
+#    - php: 5.3
+#      env: WP_VERSION=latest WP_MULTISITE=1
 
 before_script:
-  - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION 
+  - bash amber/bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION 
 
 script: phpunit
