--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,4 @@ env:
 before_script:
   - bash amber/bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION 
 
-script: phpunit amber
+script: phpunit -c amber/phpunit.xml
