--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,7 @@ php:
 
 env:
   - WP_VERSION=latest WP_MULTISITE=0
-
-#matrix:
-#  include:
-#    - php: 5.3
-#      env: WP_VERSION=latest WP_MULTISITE=1
+  - WP_VERSION=latest WP_MULTISITE=1
 
 before_script:
   - bash amber/bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION 
