--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,6 @@ env:
 before_script:
   - bash amber/bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION 
 
-script: phpunit -c amber/phpunit.xml
+script: 
+  - phpunit -c amber/phpunit.xml
+  - phpunit --exclude-group ExternalInterfaces libraries
