--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
   - WP_VERSION=latest WP_MULTISITE=1
 
 before_script:
-  - bash amber/bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
+  - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
 
 script:
   - phpunit -c amber/phpunit.xml
