--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,5 @@ before_script:
   - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
 
 script:
-  - phpunit -c amber/phpunit.xml
-  - phpunit --exclude-group ExternalInterfaces amber/libraries
+  - phpunit -c phpunit.xml
+  - phpunit --exclude-group ExternalInterfaces libraries
